--- a/index.html
+++ b/index.html
@@ -2,89 +2,32 @@
 <html>
     <head>
         <title>Socket.IO chat</title>
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-            body {
-                font: 13px Helvetica, Arial;
-            }
-            form {
-                background: #000;
-                padding: 3px;
-                position: fixed;
-                bottom: 0;
-                width: 100%;
-            }
-            form input {
-                border: 0;
-                padding: 10px;
-                width: 90%;
-                margin-right: 0.5%;
-            }
-            form button {
-                width: 9%;
-                background: rgb(130, 224, 255);
-                border: none;
-                padding: 10px;
-            }
-            #messages {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-            }
-            #messages li {
-                padding: 5px 10px;
-            }
-            #messages li:nth-child(odd) {
-                background: #eee;
-            }
-        </style>
+        <link href="static/style.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
         <ul id="messages"></ul>
-        <!-- <form style="bottom: 50px;" id="nickForm" action="">
-            <input id="nick" type="text" autocomplete="off" /><button>Save Nickname</button>
-        </form> -->
-        <form id="msgForm" action=""><input id="m" type="text" autocomplete="off" /><button>Send</button></form>
+        <form id="nickname" action="/">
+            <input id="name" type="text" required autocomplete="off" /><button>Join Room</button>
+        </form>
 
         <script src="/socket.io/socket.io.js"></script>
         <script>
             (function() {
-                let socket = io();
-                let msgForm = document.querySelector("#msgForm");
-                // let nickForm = document.querySelector("#nickForm");
+                const socket = io();
+                const nicknameForm = document.querySelector("#nickname");
+                const messagesList = document.querySelector("#messages");
 
-                // let myNickname = ``;
-
-                msgForm.addEventListener("submit", e => {
+                nicknameForm.addEventListener("submit", e => {
                     e.preventDefault();
-                    const val = document.querySelector("#m");
-                    socket.emit(`${myNickname}chat message`, val.value);
-                    val.value = ``;
+                    socket.emit(`join_room`, e.target.name.value);
+                    e.target.name.value = "";
                     return false;
                 });
-                // nickForm.addEventListener("submit", e => {
-                //     e.preventDefault();
-                //     const val = document.querySelector("#nick");
-                //     myNickname = `${val.value} `;
-                //     socket.emit(`set nickname`, val.value);
-                //     val.value = ``;
-                //     return false;
-                // });
 
-                socket.on("chat message", function(msg) {
+                socket.on(`chat_message`, msg => {
                     const listItem = document.createElement(`li`);
                     listItem.textContent = msg;
-                    document.querySelector("#messages").appendChild(listItem);
-                });
-
-                socket.on("connected message", function(msg) {
-                    const listItem = document.createElement(`li`);
-                    listItem.textContent = msg;
-                    document.querySelector("#messages").appendChild(listItem);
+                    messagesList.appendChild(listItem);
                 });
             })();
         </script>
