--- a/public/signup.html
+++ b/public/signup.html
@@ -11,7 +11,7 @@
     </head>
     <body class="container">
         <div class="page-header">
-            <h1>Simple Auth-System</h1>
+            <h1>6-Handed Euchre Sign Up</h1>
         </div>
 
         <nav class="navbar navbar-default">
@@ -21,12 +21,11 @@
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/dashboard">Dashboard</a></li>
+                        <li><a href="/game-boards">Games</a></li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="/login">Log In</a></li>
-                        <li><a href="/logout">Log Out</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -35,24 +34,24 @@
         </nav>
 
         <div class="container row">
-            <div class="jumbotron col-sm-4 pull-center">
-                <form action="/signup" method="post">
-                    <div>
-                        <label>Username:</label>
-                        <input type="text" name="username" />
-                    </div>
-                    <div>
-                        <label>Email:</label>
-                        <input type="text" name="email" />
-                    </div>
-                    <div>
-                        <label>Password:</label>
-                        <input type="password" name="password" />
-                    </div>
-                    <div>
-                        <input class="btn btn-primary" type="submit" value="Sign Up" />
-                    </div>
-                </form>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form action="/signup" method="post">
+                        <div class="form-group">
+                            <label>Username:</label>
+                            <input type="text" name="username" />
+                        </div>
+                        <div class="form-group">
+                            <label>Email:</label>
+                            <input type="text" name="email" />
+                        </div>
+                        <div class="form-group">
+                            <label>Password:</label>
+                            <input type="password" name="password" />
+                        </div>
+                        <button class="btn btn-primary" type="submit">Sign Up</button>
+                    </form>
+                </div>
             </div>
         </div>
     </body>
