--- a/apps/six-handed-ng/src/_public/game.html
+++ b/apps/six-handed-ng/src/_public/game.html
@@ -53,6 +53,21 @@
                 const msgForm = document.querySelector("#messageForm");
                 const messagesList = document.querySelector("#messages");
 
+                function getCookie(cname) {
+                    var name = cname + "=";
+                    var ca = document.cookie.split(";");
+                    for (var i = 0; i < ca.length; i++) {
+                        var c = ca[i];
+                        while (c.charAt(0) == " ") {
+                            c = c.substring(1);
+                        }
+                        if (c.indexOf(name) == 0) {
+                            return c.substring(name.length, c.length);
+                        }
+                    }
+                    return "";
+                }
+
                 msgForm.addEventListener("submit", e => {
                     e.preventDefault();
                     socket.emit(`chat_message`, e.target.message.value);
@@ -65,6 +80,14 @@
                     listItem.textContent = msg;
                     messagesList.appendChild(listItem);
                 });
+
+                fetch(`http://localhost:4300/get-user`)
+                    .then(response => {
+                        return response.json();
+                    })
+                    .then(data => {
+                        socket.emit(`chat_message`, `${data.username} joined`);
+                    });
             })();
         </script>
     </body>
